# ROS2-YOLO-Object-Detection

./: .gitignore  LICENSE  README.md  README_CN.md  package.xml  requirements.txt  setup.cfg  setup.py
config/: camera.yaml  yolo.yaml
dataset/: README.md
docs/: architecture.md  deployment.md  installation.md  training.md
examples/: ros_camera.py  webcam.py
launch/: yolo_detector.launch.py
models/: README.md
msg/: Detection2D.msg  Detection2DArray.msg
my_yolo_detector/: utils.py  yolo_detector_node.py
scripts/: capture_dataset.py  export.sh  predict.sh  train.sh
test/: test_detector.py
