<?xml version="1.0"?>
<package format="3">
  <name>my_yolo_detector</name>
  <version>1.0.0</version>

  <description>
    ROS2 Humble object detection package based on YOLOv8 and OpenCV.
  </description>

<maintainer email="1822108575@qq.com">hyx10-10</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>